fixing overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  @apply scroll-smooth;
+html,
+body {
+  @apply scroll-smooth overflow-x-hidden;
 }
 
 @layer base {
